<resources>
    // General
    <string name="app_name">Check Mate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="red_x">\u274C</string>
    <string name="blank" />
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="click_here">Click Here</string>

    // Sign In
    <string name="sign_in">Sign In</string>
    <string name="sign_in_prompt_to_sign_up">Don\'t have an account?</string>
    <string name="sign_in_failure">Credentials are invalid</string>
    <string name="sign_in_email_error">"Email is invalid"</string>
    <string name="sign_in_password_error">"Password is invalid"</string>
    <string name="sign_in_forgot_password">"Forgot your password?</string>

    // Forgot Password
    <string name="forgot_password_email_error">"Email is invalid"</string>
    <string name="forgot_password_failure">"Failed to send email"</string>
    <string name="forgot_password_success">"Sent password reset email"</string>

    // Sign Up
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_repeat_password">Repeat Password</string>
    <string name="sign_up_prompt_to_sign_in">Already have an account?</string>
    <string name="sign_up_failure">Failed to create account</string>
    <string name="sign_up_email_error">Email is invalid</string>
    <string name="sign_up_pw_min_length">Password is too short\n</string>
    <string name="sign_up_pw_max_length">Password is too long\n</string>
    <string name="sign_up_pw_lowercase">Password needs at least one lowercase letter\n</string>
    <string name="sign_up_pw_uppercase">Password needs at least one uppercase letter\n</string>
    <string name="sign_up_pw_character">Password needs at least one special character\n</string>
    <string name="sign_up_pw_digit">Password needs at least one digit\n</string>
    <string name="sign_up_pw_match_error">Passwords do not match</string>
    <string name="sign_up_display_name">Display Name</string>
    <string name="sign_up_display_name_min_length">Display name is too short\n</string>
    <string name="sign_up_display_name_max_length">Display name is too long\n</string>
    <string name="sign_up_display_name_alpha_num">Display name can only contain alphanumeric characters\n</string>

    // Checklist
    <string name="checklist_title_placeholder">Title</string>
    <string name="checklist_type_placeholder">Type here…</string>
    <string name="checklist_unfavorite">Unfavorite</string>
    <string name="checklist_delete">Delete Checklist</string>
    <string name="checklist_clear">Clear Checklist</string>
    <string name="checklist_edit">Edit</string>
    <string name="checklist_edit_stop">Stop Editing</string>
    <string name="checklist_add_divider">Add Divider</string>
    <string name="checklist_default_divider">Divider</string>
    <string name="checklist_delete_prompt">Are you sure you want to delete this checklist?</string>

    // Checklists
    <string name="checklists">Checklists</string>
    <string name="checklists_filter_private">Private</string>
    <string name="checklists_filter_shared">Shared</string>
    <string name="checklists_filter_favorite">Favorite</string>
    <string name="checklists_none_found">No checklists found</string>

    // Home
    <string name="home">Home</string>
    <string name="home_no_favorites">You have no favorite checklists</string>

    // Profile
    <string name="profile">Profile</string>
    <string name="profile_change_display_name">Change Display Name</string>
    <string name="profile_change_password">Change Password</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_sign_out">Sign Out</string>
    <string name="profile_prompt_sign_out">Are you sure you want to sign out?</string>

    // Add Checklist
    <string name="add_checklist_create_checklist">Create New Checklist</string>
    <string name="add_checklist_create_success">Created a new checklist</string>
    <string name="add_checklist_share_prompt">Have a checklist share code? </string>
    <string name="add_checklist_shared_checklist">Add Shared Checklist</string>
    <string name="add_checklist_shared_code">Code</string>
    <string name="add_checklist_shared_success">Added a shared checklist</string>
    <string name="add_checklist_shared_fail">Failed to add checklist</string>

    // Checklist Detail
    <string name="checklist_detail_share">Share</string>
    <string name="checklist_detail_share_info">Use the code above to share the checklist. Keep this window open until you are done.</string>

    // Content Description
    <string name="desc_back">Back</string>
    <string name="desc_done">Done</string>
    <string name="desc_checklist_options">Checklist options</string>
    <string name="desc_add_checklist">Add new checklist</string>
    <string name="desc_favorite_checklist">Favorite checklist</string>
    <string name="desc_delete_checklist_item">Delete checklist item</string>
    <string name="desc_checklist_detail_menu">Checklist menu</string>
    <string name="desc_checklists_backdrop">View more settings</string>
    <string name="desc_checklists_search">Search for checklist</string>

</resources>
